--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -137,8 +137,8 @@ There are also other problems with using standardized charts, such as older pati
 
 Another problem we faced is designing a user interface that can give the optician easy access to these specialized charts and layouts. An intuitive design so that it is easy to learn, and a user friendly design so that users don't accidentally make unintentional or irreversible changes.
 
-\subsection{Nytt, behålls, bara denna rubrik tas bort när det gamla är fixat}
-We want to create a system that allows opticians to quickly prepare and perform an eye examination. 
+\subsection{Nytt, behålls, bara denna rubrik tas bort när det gamla är fixat \\ se över den här texten så det inte blir nya problem}
+We want to create a system that allows opticians to quickly prepare and perform an eye examination using a digital chart displayed on a monitor controlled by an Android device.
 
 \section{Delimitations}
 Due to limits in time and manpower, this project is not intended to result in a complete working system to be used clinically, but rather a working prototype that can be used to evaluate digital visual acuity charts. To complete the project on time, as much as possible of Java's and Android's built-in libraries will be used in order to avoid recreating code that already exists, thus saving time. Neither Java nor Android include libraries for rendering SVG-files and third party libraries will be used instead.
