--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -38,7 +38,14 @@
 \maketitle
 
 \begin{abstract}
-Digitalization of Visual Acuity Testing is a project about digitally displaying and manipulating optician's eye charts. The charts are displayed on a digital screen with a lightweight server running on a Raspberry Pi and controlled over wireless network via an Android tablet. This solves several problems related to the distance from the patient to the chart, while also providing more ways for the optician to tailor the examination to the patient. The Digitalization of Visual Acuity Testing project has improved upon a proof-of-concept system that has been used at the Uppsala University Hospital to test whether or not digital screens are a viable alternative to physical charts. The project fulfills our goals and has performed well under testing by us, but more testing is needed to make sure it meets the demands of practicing opticians. 
+Digitalization of Visual Acuity Testing is a project about digitally displaying and manipulating optician's eye charts. The charts are displayed on a digital screen with a lightweight server running on a Raspberry Pi and controlled over a wireless network via an Android tablet. 
+%%This solves several problems related to the distance from the patient to the chart, while also providing more ways for the optician to tailor the examination to the patient.
+This allows the charts to adapt when placed at different distances from the patient, while also allowing the optometrist to tailor the examination to the patient by switching between multiple sheet designs and specialized sets of characters. 
+The Digitalization of Visual Acuity Testing project has improved upon a proof-of-concept system that has been used at the Uppsala University Hospital to test whether or not digital screens are a viable alternative to physical charts. The project fulfils its goals and has performed well under testing, but more testing is needed to make sure it meets the demands of practising optometrists.
+\end{abstract}
+\renewcommand{\abstractname}{Sammanfattning}
+\begin{abstract}
+Digitalization of Visual Acuity Testing är ett projekt om att visa och manipulera syntavlor digitalt. Syntavlorna visas på en bildskärm kopplad till en enkel server som är installerad på en Raspberry Pi och kan styras över ett trådlöst nätverk med hjälp av en Androidsurfplatta. Eftersom tavlorna är digitala kan de anpassas till avståndet mellan patienten och tavlan, samtidigt som de låter en optiker anpassa synundersökningen till patienten genom att tillåta snabbt byte av syntavlans layout och symboler. Projektet bygger på ett testsystem som har använts vid Akademiska Sjukhuset för att undersöka ifall digitala skärmar är ett passande alternativ till trykta syntavlor. Digitalization of Visual Acuity Testing har uppfyllt sina mål och har presterat väl i tester, men mer tester måste genomföras för att se till att det upfyller alla krav en optiker skulle kunna ha på projektet.
 \end{abstract}
 \renewcommand\thechapter{ }
 \tableofcontents*
