--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -118,18 +118,18 @@ Using the original system as a basis for our own we built a system that
 \end{itemize}
 
 \section{Motivation}
-Building upon what is said in the last section we need to find a clear motivation on why this should be done. A few things can be found in the working environment of the optician. Determining visual acuity is a very labor- and equipment-intensive process. It is a lot of manual labor with much time wasted when setting up and changing the equipment used. This work-load is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in many cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods needs to be used. 
+Building upon what is said in the last section we need to find a clear motivation on why this should be done. A few things can be found in the working environment of the optician. Determining visual acuity is a very labor- and equipment-intensive process. It is a lot of manual labor with much time wasted when setting up and changing the equipment used. This work-load is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in many cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods need to be used. 
 
 Another fact is that physical eye charts are not as accurate as they should be for accurate measurements. They are also big in size and static, static in this context because they are fixed and cannot be changed. Because the handling of printed charts is slow and not as accurate as needed there exists a need for improvement. 
 
 A digital eye chart has increased functionality, accuracy and efficiency which are all important aspects to approve upon. A digitalization also gives the user a greater possibility for extending the usage of the system.
 
 \section{Issues}
-There are several technical problems that we need to solve. We need to find a suitable computer system that will act as the server, its job being storing and presenting the desired images to the screen. Our current plan is to use a Raspberry Pi, since it is a cheap and compact alternative to a full-size computer that is more than powerful enough for our purposes. Though, since the Raspberry Pi's CPU is running on an ARM-architecture there will be a few compatibility problems. For example, the newly redesigned Java graphics library JavaFX, that is going to replace the older Swing library, has very bad support for ARM. Not being able to use the latest features can create problems in the future when some things get deprecated. If Java Swing would happen to become deprecated it should not be too difficult to transfer the code to a hopefully compatible Java FX version.  
+There are several technical problems that we need to solve. We need to find a suitable computer system that will act as the server, its job being storing and presenting the desired images to the screen. Our choice was to use a Raspberry Pi, since it is a cheap and compact alternative to a full-size computer that is more than powerful enough for our purposes. Although since the Raspberry Pi's CPU is running on an ARM-architecture there are a few compatibility problems. For example, the newly redesigned Java graphics library JavaFX, which is eventually going to replace the older Swing library, is only partially supported on ARM. Not being able to use the latest features can create problems with future Java updates when some things get deprecated. If Java Swing would become deprecated in the future it should not be too difficult to transfer the code to a compatible Java FX version.
 
-Designing the Android app for the tablet will also bring technical problems, both from the limitations of portable computers, and making our software adaptable enough to work on as many brands of tablets as possible. For example, the symbols we are to present are stored in the .SVG (Scalable Vector Graphics) format, which is not natively supported on Android. Because of this we must find and work with a licensed third-party software library to render them. 
+Designing the Android app for the tablet also brought technical problems, both from the limitations of portable computers, and in making our software adaptable enough to work on as many brands of tablets as possible. For example, the symbols we display are stored in the .SVG (Scalable Vector Graphics) format, which is not natively supported on Android. Because of this we use a licensed third-party software library to render them. 
 
-Finally, we have the issue of networking. A lot can go wrong when trying to control a program over a network and also trying to have the response be fast and accurate. Any problems between the controller and the server will make actions seem slow and inconsistent. It can be even worse when working on a wireless network as in our case. This is an equally important problem as the other ones, but there exists several great technologies helping to prevent these kind of issues that will be a great help to us. 
+Finally, we have the issue of networking. Our concern was being able to reliably control the server over a wireless network while having the response be fast and accurate. Any connection problems between the controller and the server will make actions seem slow, inconsistent or unresponsive. This is true both for mobile networks and wireless networks, like the ones we are using. This is an equally important problem compared to the other ones, but network communication is a well explored field, and support for the small amount of communication we need to do between the server and the tablet exists natively in Java.
 
 %\section{Ethical considerations}
 %Our ethical obligations with this project is providing a functional and stable product. If our system does not perform to specification, a lot of patients could get erroneous measurements during testing, costing a lot of time and money to correct. This is very important to think about since we are dealing with treatment of people. All of this has to be considered even if the final results will not be used clinically.
