--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -190,7 +190,7 @@ For this project to be considered successful, the system must be able to display
 \end{figure}
 
 
-The user also has to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes (fig. \ref{fig:optotypes_example1}). The Sloan and HVOT optoypes consists of a different sets of letters, the Tumbling E consists of the letter E rotated in different angles and LEA is a set of custom symbols.
+The user also have to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes (fig. \ref{fig:optotypes_example1}). The Sloan and HVOT optoypes consists of a different sets of letters, the Tumbling E consists of the letter E rotated in different angles and LEA is a set of custom symbols.
 
 \begin{figure}[ht!]
 \centering
