Fixat mer på requirements

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -218,9 +218,9 @@ The user also have to be able to choose if the current chart should use the Sloa
 
 It is very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the user must to be able control the distance from which the patient is watching the monitor. It is also very important that the correct sizes, in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}, is displayed on the Android device.
 
-The intended user for this system should not need any specific background knowledge about technology more than the basic use of Android device, for example being able to start the device, start an application and how to perform simple Android gestures. This does not mean that it has to be easy to install and set up, though it is a goal for future expansion. 
+The intended user for this system should have all the necessary knowledge and education on how to perform an eye examination. The user should not need any more than basic knowledge about an Android device, such as being able to start the device, connect to a wireless network, start an application and how to perform simple Android gestures. This does not mean that it has to be easy to install and set up, though it is a goal for future expansion. 
 
-The Android application should be very user friendly and follow the Android design principles set up by Google \cite{android_design}. This makes the application behave similar to other Android applications which will result in users already familiar with Android, to get the expected result from their actions. 
+The Android application should follow the Android design principles set up by Google \cite{android_design}. This makes the application behave similar to other Android applications which will result in users already familiar with Android feel familiar to this application as well.
 
 The system should also allow for automatic server detection so that users don't have to manually connect by entering IP addresses. This allows a quick and easy way to connect to a server. In order for the server detection to be considered working properly, it should detect a server on a stable network atleast 90\% of the time.
 
