Done with requrements

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -222,7 +222,7 @@ The intended user for this system should have all the necessary knowledge and ed
 
 The Android application should follow the Android design principles set up by Google \cite{android_design}. This makes the application behave similar to other Android applications which will result in users already familiar with Android feel familiar to this application as well.
 
-The system should also allow for automatic server detection so that users don't have to manually connect by entering IP addresses. This allows a quick and easy way to connect to a server. In order for the server detection to be considered working properly, it should detect a server on a stable network atleast 90\% of the time.
+The system should also allow for automatic server detection so that users don't have to manually connect by entering IP addresses. This allows a quick and easy way to connect to a server. In order for the server detection to be considered working properly, it should detect a server on a stable network at least 90\% of the time. With a success rate of 90\%, it would be very uncommon to fail the detection twice in a row, while keeping the scanning time relatively low.
 
 As this project only aims for a working prototype of the system, it is very important that it is easy to continue the development and add more features without rewriting large parts of the code.
 
